[package]
name = "signal"
version = "0.1.0"
author = ["anonymous.rs <jeff.cofos@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"]}
redis = { version = "1.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = "0.6.8"
bb8 = "0.8"
bb8-redis = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
config = "0.15.19"
